# ensemble_eeg

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  NOTICE  README.md  brm_demo.py  brm_to_edf.py  demo.py  ensemble_edf.py  pyproject.toml  tutorial_anonymize_edf_files.py  tutorial_combine_left_and_right_aeeg_channels.py  tuturial_convert_brm_to_edf.py
.github/workflows/: lint.yaml  publish.yml
demos/: anonymize_edf_files.py  convert_brm_to_edf.py
ensemble_eeg/: __main__.py  brm_to_edf.py  ensemble_edf.py
