[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ensemble_eeg"
version = "0.1.6"
authors = [
  { name="Bauke van der Velde", email="b.vandervelde-3@umcutrecht.nl" },
]
description = "Package used to analyze preprocess edf files for the ENSEMBLE2 study"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "defusedxml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",  
    "Operating System :: OS Independent",
]

[tool.ruff.lint]
extend-select = [
    "UP",
    "I",
    "B",
    "C4",
    "PIE",
    "PYI",
    "SIM",
    "PGH",
    "FLY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = [
    "UP038",  # https://github.com/astral-sh/ruff/issues/7871
	"B028",
	"PYI024",
	"SIM115",
	"RUF005",
]
